--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,352 @@
-crewai>=0.31.0
-langchain>=0.0.335
-langchain-openai>=0.0.2
-langchain-community>=0.0.1
-langchain-core>=0.1.0
-langchain-text-splitters>=0.0.1
-youtube-transcript-api>=0.6.2
-python-decouple>=3.8
-crewai-tools>=0.1.6
-pyyaml>=6.0
-colorlog>=6.7.0
-pydantic>=2.0.0
-tqdm>=4.66.0
-streamlit>=1.31.0
-pandas>=2.0.0
-python-dotenv>=1.0.0
-chromadb>=0.4.18
-tiktoken>=0.5.1
-pytube>=15.0.0
-moviepy==1.0.3
-yt-dlp>=2023.7.6
-requests>=2.31.0
-supabase>=2.3.0
-reportlab>=4.0.0
-markdown>=3.4.0
-langchain-anthropic>=0.3.10
-langchain-google-genai
-langchain-tavily
+agno==1.5.2
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.1
+alembic==1.15.1
+altair==5.5.0
+amqp==5.3.1
+annotated-types==0.7.0
+anthropic==0.46.0
+anyio==4.9.0
+appdirs==1.4.4
+appnope==0.1.4
+asgiref==3.8.1
+asttokens==3.0.0
+asyncio==3.4.3
+asyncpg==0.30.0
+attrs==25.3.0
+auth0-python==4.8.1
+backoff==2.2.1
+bcrypt==4.3.0
+beautifulsoup4==4.13.3
+billiard==4.2.1
+blinker==1.9.0
+boto3==1.37.28
+botocore==1.37.28
+browser-use==0.1.40
+build==1.2.2.post1
+cachetools==5.5.2
+celery==5.4.0
+certifi==2025.4.26
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.2
+chonkie==1.0.7
+chroma-hnswlib==0.7.6
+chromadb==0.5.23
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cohere==5.14.0
+coloredlogs==15.0.1
+colorlog==6.9.0
+comm==0.2.2
+contourpy==1.3.1
+crewai==0.105.0
+crewai-tools==0.37.0
+cryptography==44.0.3
+cua-agent==0.1.22
+cua-computer==0.1.21
+cua-core==0.1.4
+cua-som==0.1.1
+cycler==0.12.1
+dashscope==1.23.0
+dataclasses-json==0.6.7
+debugpy==1.8.13
+decorator==4.4.2
+defusedxml==0.7.1
+Deprecated==1.2.18
+deprecation==2.1.0
+distro==1.9.0
+dnspython==2.7.0
+docker==7.1.0
+docstring_parser==0.16
+duckduckgo_search==8.0.1
+durationpy==0.9
+easyocr==1.7.2
+email_validator==2.2.0
+embedchain==0.1.127
+et_xmlfile==2.0.0
+executing==2.2.0
+faiss-cpu==1.10.0
+fastapi==0.115.11
+fastavro==1.10.0
+filelock==3.18.0
+filetype==1.2.0
+flatbuffers==25.2.10
+flower==2.0.1
+fonttools==4.57.0
+frozenlist==1.6.0
+fsspec==2025.3.2
+gitdb==4.0.12
+GitPython==3.1.44
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.2
+google-api-python-client==2.166.0
+google-auth==2.40.1
+google-auth-httplib2==0.2.0
+google-cloud-aiplatform==1.84.0
+google-cloud-bigquery==3.30.0
+google-cloud-core==2.4.3
+google-cloud-resource-manager==1.14.1
+google-cloud-storage==2.19.0
+google-crc32c==1.6.0
+google-genai==1.14.0
+google-generativeai==0.8.4
+google-resumable-media==2.7.2
+googleapis-common-protos==1.69.1
+gotrue==2.11.4
+gptcache==0.1.44
+greenlet==3.1.1
+groq==0.4.2
+grpc-google-iam-v1==0.14.1
+grpcio==1.67.1
+grpcio-status==1.71.0
+grpcio-tools==1.71.0
+gunicorn==23.0.0
+h11==0.16.0
+h2==4.2.0
+hf-xet==1.1.0
+hpack==4.1.0
+httpcore==1.0.9
+httplib2==0.22.0
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.31.1
+humanfriendly==10.0
+humanize==4.12.2
+hyperframe==6.1.0
+idna==3.10
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+iniconfig==2.1.0
+instructor==1.7.4
+ipykernel==6.29.5
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+Jinja2==3.1.6
+jiter==0.9.0
+jmespath==1.0.1
+json5==0.10.0
+json_repair==0.39.1
+jsonpatch==1.33
+jsonpickle==4.0.2
+jsonpointer==3.0.0
+jsonref==1.1.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.8
+kombu==5.5.1
+kubernetes==32.0.1
+lancedb==0.21.1
+langchain==0.3.20
+langchain-anthropic==0.3.3
+langchain-cohere==0.3.5
+langchain-community==0.3.19
+langchain-core==0.3.46
+langchain-experimental==0.3.4
+langchain-google-genai==2.0.10
+langchain-ollama==0.2.2
+langchain-openai==0.3.1
+langchain-tavily==0.1.5
+langchain-text-splitters==0.3.6
 langgraph==0.3.11
-faiss-cpu
+langgraph-checkpoint==2.0.20
+langgraph-prebuilt==0.1.3
+langgraph-sdk==0.1.57
+langsmith==0.1.147
+lazy_loader==0.4
+litellm==1.69.1
+loguru==0.7.3
+lxml==5.4.0
+Mako==1.3.9
+Markdown==3.7
+markdown-it-py==3.0.0
+markdownify==0.14.1
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mem0ai==0.1.67
+milvus-lite==2.4.12
+mmh3==5.1.0
+monotonic==1.6
+moviepy==1.0.3
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.4.3
+mypy==1.15.0
+mypy-extensions==1.0.0
+narwhals==1.38.2
+nest-asyncio==1.6.0
+networkx==3.4.2
+ninja==1.11.1.4
+nodeenv==1.9.1
+numpy==2.2.5
+oauthlib==3.2.2
+ollama==0.4.7
+onnxruntime==1.21.0
+openai==1.75.0
+opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
+openpyxl==3.1.5
+opentelemetry-api==1.31.0
+opentelemetry-exporter-otlp-proto-common==1.31.0
+opentelemetry-exporter-otlp-proto-grpc==1.31.0
+opentelemetry-exporter-otlp-proto-http==1.31.0
+opentelemetry-instrumentation==0.52b0
+opentelemetry-instrumentation-asgi==0.52b0
+opentelemetry-instrumentation-fastapi==0.52b0
+opentelemetry-proto==1.31.0
+opentelemetry-sdk==1.31.0
+opentelemetry-semantic-conventions==0.52b0
+opentelemetry-util-http==0.52b0
+orjson==3.10.15
+overrides==7.7.0
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pdfminer.six==20231228
+pdfplumber==0.11.5
+pexpect==4.9.0
+pillow==11.2.1
+platformdirs==4.3.7
+playwright==1.51.0
+plotly==6.0.0
+pluggy==1.5.0
+portalocker==2.10.1
+postgrest==0.19.3
+posthog==3.23.0
+primp==0.15.0
+proglog==0.1.10
+prometheus_client==0.21.1
+prompt_toolkit==3.0.50
+propcache==0.3.1
+proto-plus==1.26.1
+protobuf==6.30.2
+psutil==7.0.0
+psycopg2-binary==2.9.10
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
+pyarrow==20.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pyclipper==1.3.0.post6
+pycparser==2.22
+pydantic==2.11.4
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
+pydeck==0.9.1
+pyee==12.1.1
+pygments==2.19.0
+PyJWT==2.8.0
+pylibmagic==0.5.0
+PyMuPDF==1.25.0
+PyMySQL==1.1.1
+pyOpenSSL==24.2.0
+pyparsing==3.1.2
+pypdf==4.3.1
+PySide6==6.8.0
+PySide6-Addons==6.8.0
+PySide6-Essentials==6.8.0
+PySocks==1.7.1
+python-dateutil==2.10.0
+python-decouple==3.8
+python-dotenv==1.0.1
+python-editor==1.0.4
+python-jose==3.3.0
+python-magic==0.4.27
+python-multipart==0.0.9
+python-slugify==8.1.0
+pytube==15.0.0
+PyYAML==6.0.1
+pyzmq==26.0.3
+ratelimit==3.0.0b3
+readme-renderer==43.0
+referencing==0.36.0
+reportlab==4.2.3
+requests==2.32.3
+requests-oauthlib==2.0.1
+requests-toolbelt==1.0.0
+rich==13.8.0
+rpds-py==0.19.1
+rsa==4.9
+s3transfer==0.11.1
+schema==0.7.6
+scikit-learn==1.6.1
+scipy==1.15.1
+semantic-version==2.10.0
+Send2Trash==1.8.3
+sentence-transformers==3.1.0
+sentencepiece==0.2.2
+Shapely==2.0.5
+shiboken6==6.8.0
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+soundfile==0.13.0
+soupsieve==2.5
+SQLAlchemy==2.0.36
+sqlalchemy-utils==0.41.2
+sqlparse==0.5.1
+sse-starlette==2.1.1
+stack_data==0.6.3
+starlette==0.38.1
+streamlit==1.40.0
+streamlit-analytics2==0.4.0
+streamlit-feedback==0.2.0
+streamlit-option-menu==0.4.0
+streamlit-pydantic==0.13.0
+streamlit-quill==0.0.3
+streamlit-shadcn-ui==0.1.17
+streamlit-supabase-auth==0.3.0
+supabase==2.5.2
+sympy==1.13.0
+tabulate==0.9.0
+tenacity==9.2.0
+termcolor==2.4.0
+text-unidecode==1.3
+threadpoolctl==3.5.0
+tiktoken==0.8.0
+tokenizers==0.19.1
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.1
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
+tornado==6.4.1
+tqdm==4.66.4
+traitlets==5.14.3
+transformers==4.45.2
+triton==2.5.1
+troposphere==4.9.0
+typing_extensions==4.16.0
+tzdata==2024.1
+ujson==5.10.0
+ultralytics==8.2.83
+urllib3==2.2.2
+uvicorn==0.30.3
+validators==0.33.1
+vine==5.1.0
+watchfiles==0.22.0
+wcwidth==0.2.13
+websockets==13.0
+wrapt==1.16.0
+xet-core==0.16.1
+xlrd==2.0.1
+xlwt==1.3.0
+yarl==1.9.4
+yt-dlp==2024.7.30
+youtube-transcript-api==0.6.3
+zipp==3.19.2
