Update LLM model to GPT-5 and remove deprecated services for a leaner codebase. Enhanced UI progress handling and improved video info fetching logic. Cleaned up unused utilities and adjusted README documentation accordingly.

--- a/env.template
+++ b/env.template
@@ -18,13 +18,13 @@ LOG_DATE_FORMAT=%Y-%m-%d %H:%M:%S
 # =============================================================================
 # LLM CONFIGURATION
 # =============================================================================
-LLM_DEFAULT_MODEL=gpt-4.1-mini
+LLM_DEFAULT_MODEL=gpt-5-mini
 LLM_DEFAULT_TEMPERATURE=0.2
 LLM_DEFAULT_MAX_TOKENS=0
 LLM_DEFAULT_TIMEOUT=60
 
 # Available models (comma-separated)
-LLM_AVAILABLE_MODELS=gpt-4.1-mini,gpt-4.1,gemini-2.5-flash-preview-04-17,gemini-2.5-pro-preview-05-06
+LLM_AVAILABLE_MODELS=gpt-5,gpt-5-mini,gpt-4.1-mini,gpt-4.1,gemini-2.5-flash-preview-04-17,gemini-2.5-pro-preview-05-06
 
 
 # =============================================================================
