Enhance Dockerfile and environment configuration for YouTube API integration. Added development-specific environment variables to bypass SSL verification and improve HTTP request handling. Updated requirements for langchain_core and langgraph packages, and refactored transcript fetching logic to support yt-dlp for better subtitle management.

--- a/env.template
+++ b/env.template
@@ -80,6 +80,26 @@ GLAMA_API_KEY=your_glama_api_key_here
 ENABLE_DYNAMIC_COSTS=true
 
 # =============================================================================
+# VIDEO DOWNLOAD / PIPED CONFIGURATION
+# =============================================================================
+# Optional: Override Piped instance for audio fallback when SSL is disabled
+# PIPED_BASE_URL=https://piped.video
+
+# =============================================================================
+# YOUTUBE TRANSCRIPT API CONFIGURATION
+# =============================================================================
+# SSL and network configuration for YouTube requests (useful in Docker/cloud environments)
+# YOUTUBE_ANALYSIS_DISABLE_SSL_VERIFY=false
+# YOUTUBE_HTTP_USER_AGENT=Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36
+# YOUTUBE_HTTP_ACCEPT_LANGUAGE=en-US,en;q=0.9
+
+# Proxy configuration for bypassing YouTube IP blocks (requires youtube-transcript-api v1.0+)
+# YOUTUBE_PROXY_HTTP=http://user:pass@proxy:port
+# YOUTUBE_PROXY_HTTPS=https://user:pass@proxy:port
+# WEBSHARE_PROXY_USERNAME=your_webshare_username
+# WEBSHARE_PROXY_PASSWORD=your_webshare_password
+
+# =============================================================================
 # UI CONFIGURATION
 # =============================================================================
 UI_DEFAULT_USE_CACHE=true
