--- a/env.template
+++ b/env.template
@@ -86,6 +86,18 @@ ENABLE_DYNAMIC_COSTS=true
 # PIPED_BASE_URL=https://piped.video
 
 # =============================================================================
+# YT-DLP COOKIES & HEADERS (use when YouTube requires login / bot check)
+# =============================================================================
+# Provide cookies to yt-dlp to bypass "Sign in to confirm you’re not a bot"
+# One of the following must be set (in precedence order):
+# - YTDLP_COOKIES_FILE: absolute path to a Netscape cookies.txt file
+# - YTDLP_COOKIES: raw Netscape cookies.txt content
+# - YTDLP_COOKIES_BASE64: base64-encoded Netscape cookies.txt content
+# Optionally set headers to improve success rate in cloud environments
+# YTDLP_ACCEPT_LANGUAGE=en-US,en;q=0.9
+# YTDLP_USER_AGENT=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/124.0.0.0 Safari/537.36
+
+# =============================================================================
 # YOUTUBE TRANSCRIPT API CONFIGURATION
 # =============================================================================
 # SSL and network configuration for YouTube requests (useful in Docker/cloud environments)
