Enhance proxy support for yt-dlp and YouTube API requests
Updated the RobustTranscriptFetcher, YouTubeClient, and WhisperTranscriber to incorporate proxy settings from environment variables, allowing for better handling of requests in various network environments. Added documentation in the env.template for configuring proxies, ensuring improved success rates in cloud deployments.

--- a/env.template
+++ b/env.template
@@ -96,6 +96,9 @@ ENABLE_DYNAMIC_COSTS=true
 # Optionally set headers to improve success rate in cloud environments
 # YTDLP_ACCEPT_LANGUAGE=en-US,en;q=0.9
 # YTDLP_USER_AGENT=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/124.0.0.0 Safari/537.36
+# If you use proxies with yt-dlp, set one of:
+# YTDLP_PROXY=http://user:pass@host:port
+# ROTATING_PROXIES=http://user:pass@host1:port,http://user:pass@host2:port  # a comma-separated list; one will be chosen per request
 
 # =============================================================================
 # YOUTUBE TRANSCRIPT API CONFIGURATION
@@ -110,6 +113,10 @@ ENABLE_DYNAMIC_COSTS=true
 # YOUTUBE_PROXY_HTTPS=https://user:pass@proxy:port
 # WEBSHARE_PROXY_USERNAME=your_webshare_username
 # WEBSHARE_PROXY_PASSWORD=your_webshare_password
+
+# Notes:
+# - When both YTDLP_PROXY/ROTATING_PROXIES and YOUTUBE_PROXY_* are set, yt-dlp will use YTDLP_PROXY/ROTATING_PROXIES,
+#   while direct requests (YouTubeTranscriptApi, Piped, oEmbed) use YOUTUBE_PROXY_*.
 
 # =============================================================================
 # UI CONFIGURATION
